[bugfix] url missing error

--- a/src/tree/features/tab-master-tree/style.less
+++ b/src/tree/features/tab-master-tree/style.less
@@ -1,6 +1,4 @@
-@import url('../../../styles/iconfont/iconfont.css');
-@import url('../../../styles/dark-mode.less');
-@import url('../../../styles/light-mode.less');
+@import url('../../../styles/common.less');
 
 ::-webkit-scrollbar {
     width: 10px;
@@ -305,7 +303,6 @@ body {
         }
 
         span.zt-node-alias {
-            font-weight: bold;
             vertical-align: middle;
         }
     }
