--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -1,3 +1,7 @@
+@import url('./iconfont/iconfont.css');
+@import url('./dark-mode.less');
+@import url('./light-mode.less');
+
 .clearfix {
     &::after {
         display: table;
