--- a/src/tree/features/tab-master-tree/style.less
+++ b/src/tree/features/tab-master-tree/style.less
@@ -277,7 +277,7 @@ body {
             }
         }
 
-        &.closed {
+        .zt-node.closed {
             .zt-node-alias {
                 color: var(--alias-closed-color);
             }
