--- a/src/tree/features/search/search.less
+++ b/src/tree/features/search/search.less
@@ -6,7 +6,7 @@
     padding-left: 5px;
     line-height: 30px;
     vertical-align: middle;
-    background-color: var(rgb(34 34 34));
+    background-color: var(--search-input-bg-color);
     border: 1px solid var(--search-input-border-color);
     border-radius: 4px;
     .clearfix();
