[feature|import|unfinished] import data transport by localStorage

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -9,3 +9,11 @@
         content: '';
     }
 }
+
+.divider::after {
+    display: flex;
+    width: 100%;
+    margin: 5px 0 10px;
+    content: '';
+    border-bottom: 1px solid #d9d9d9;
+}
