--- a/src/tree/features/Settings/settings.less
+++ b/src/tree/features/Settings/settings.less
@@ -21,14 +21,17 @@
 
 .settings-modal {
     .setting-head {
+        margin-bottom: 10px;
         font-size: 13px;
+    }
 
-        &::after {
-            display: flex;
-            width: 100%;
-            margin: 5px 0 10px;
-            content: '';
-            border-bottom: 1px solid #d9d9d9;
-        }
+    .setting-item-btn {
+        //width: 60px;
+        height: 30px;
+        font-size: 12px;
+    }
+
+    .settings-item {
+        margin-top: 10px;
     }
 }
