[ui] adjust theme color and setting modal color

--- a/src/styles/dark-mode.less
+++ b/src/styles/dark-mode.less
@@ -1,25 +1,30 @@
 :root[theme='dark-mode'] {
-    --main-font-color: #f2f2f2;
+    --main-font-color: #c6c7cc;
     --main-border-color: #3f3f3f;
     --expander-color: #8d8e9a;
     --indent-line-color: #29292b;
+    --main-bg-color: #29272a; // 主背景颜色
+    --primary-color: #fcc304;
+    //--main-bg-color: #18191b;  // 主背景颜色
+    --second-bg-color: #1f2022; // 辅背景颜色
     --title-color: var(--main-font-color);
     --title-with-alias-color: #959eaa;
     --title-closed-color: #82858c;
     --alias-closed-color: #a4a4a4;
     --splitter-color: #d1d5da;
-    --title-active-bg-color: #373438;
-    --title-tab-active-color: #3465f6;
-    --title-with-alias-tab-active-color: #89a6fa;
+    --title-select-color: var(--main-font-color);
+    --title-active-bg-color: #525252;
+    --title-tab-active-color: var(--primary-color);
+    --title-with-alias-tab-active-color: #b48b00;
     --title-submatch-color: #7a7a7a;
     --title-match-color: black;
     --title-mismatch-color: #d9d9d9;
-    --header-bg-color: #18191b;
+    --header-bg-color: var(--main-bg-color);
     --header-border-bottom-color: #3d3d3d;
-    --footer-bg-color: #1f2022;
+    --footer-bg-color: var(--second-bg-color);
     --footer-border-top-color: #1f2022;
-    --content-bg-color: #18191b;
-    --title-hover-bg-color: #29272a;
+    --content-bg-color: var(--main-bg-color);
+    --title-hover-bg-color: #373438;
     --icon-bg-color: #33373d;
     --icon-border-color: var(--main-border-color);
     // search input
