--- a/src/tree/features/Settings/settings.less
+++ b/src/tree/features/Settings/settings.less
@@ -1,17 +1,24 @@
+@import url('../../../styles/common.less');
+
 .settings-container {
     //flex: 1;
     .settings-btn {
         width: 30px;
         height: 30px;
+        padding: 0;
         margin-right: 15px;
+        line-height: 30px;
         color: var(--setting-btn-icon-color);
-        //line-height: 30px;
         //vertical-align: center;
         text-align: center;
         //border-radius: 4px;
         cursor: pointer;
         background-color: var(--setting-btn-bg-color);
         border: 1px solid var(--setting-btn-border-color);
+
+        &:focus-visible {
+            outline: 0;
+        }
 
         &:hover {
             background-color: var(--setting-btn-hover-bg-color);
@@ -33,5 +40,33 @@
 
     .settings-item {
         margin-top: 10px;
+
+        button {
+            color: var(--main-font-color);
+            background-color: transparent;
+            transition: none;
+
+            &:hover {
+                color: white;
+                border-color: white;
+            }
+        }
+    }
+
+    .ant-modal-header {
+        background-color: var(--main-bg-color);
+
+        .ant-modal-title {
+            color: var(--main-font-color);
+        }
+    }
+
+    .ant-modal-content {
+        color: var(--main-font-color);
+        background-color: var(--main-bg-color);
+
+        .ant-modal-close-x {
+            color: var(--main-font-color);
+        }
     }
 }
