--- a/src/tree/features/search/search.less
+++ b/src/tree/features/search/search.less
@@ -1,7 +1,7 @@
 @import url('../../../styles/common.less');
 
 .search-input {
-    display: inline-block;
+    display: flex;
     height: 30px;
     padding-left: 5px;
     line-height: 30px;
@@ -13,14 +13,12 @@
 
     i.icon-search {
         position: relative;
-        float: left;
         padding-right: 5px;
         color: var(--search-input-icon-color);
     }
 
     input.search {
-        display: inline-block;
-        float: left;
+        flex: 1;
         height: 30px;
         padding-left: 10px;
         margin: 0;
