[optimize] add system.display permission & modify custom page position

--- a/src/styles/light-mode.less
+++ b/src/styles/light-mode.less
@@ -16,6 +16,6 @@
     --header-border-bottom-color: #fff;
     --footer-bg-color: rgb(242 244 245);
     --footer-border-top-color: #cecece;
-    --content-bg-color: #fff;
+    --content-bg-color: #000;
     --title-hover-bg-color: #fff;
 }
