--- a/src/tree/features/tab-master-tree/style.less
+++ b/src/tree/features/tab-master-tree/style.less
@@ -32,6 +32,8 @@ body {
 
     .app {
         position: relative;
+        display: flex;
+        flex-direction: column;
         height: 100%;
     }
 
@@ -61,6 +63,7 @@ body {
 
     .tree-container {
         display: flex;
+        flex: 1;
         flex-direction: column;
         height: calc(100% - 50px - 40px);
 
@@ -75,6 +78,7 @@ body {
     #footer {
         bottom: 0;
         z-index: 9;
+        display: none;
         width: 100%;
         height: 40px;
         background: var(--footer-bg-color);
