[ui] optimize edit-input style

--- a/src/styles/dark-mode.less
+++ b/src/styles/dark-mode.less
@@ -2,7 +2,7 @@
     --main-font-color: #c6c7cc;
     --main-border-color: #3f3f3f;
     --expander-color: #8d8e9a;
-    --indent-line-color: #29292b;
+    --indent-line-color: #3e3e3e;
     --main-bg-color: #29272a; // 主背景颜色
     --primary-color: #fcc304;
     //--main-bg-color: #18191b;  // 主背景颜色
