--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -2,6 +2,10 @@
 @import url('./dark-mode.less');
 @import url('./light-mode.less');
 
+body {
+    --main-font-size: 11px;
+}
+
 .clearfix {
     &::after {
         display: table;
