[style] optimize context-menu/dnd-marker/import-page style

--- a/src/styles/common.less
+++ b/src/styles/common.less
@@ -4,6 +4,9 @@
 
 body {
     --main-font-size: 11px;
+    --font-family: inter, ui-sans-serif, system-ui, -apple-system, blinkmacsystemfont, 'Segoe UI',
+        roboto, 'Helvetica Neue', arial, 'Noto Sans', sans-serif, 'Apple Color Emoji',
+        'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
 }
 
 .clearfix {
