[feature] add email feedback feature

--- a/src/tree/features/settings/settings.less
+++ b/src/tree/features/settings/settings.less
@@ -27,6 +27,14 @@
 }
 
 .settings-modal {
+    .setting-section {
+        margin-bottom: 20px;
+
+        .settings-item-desc {
+            margin-right: 10px;
+        }
+    }
+
     .setting-head {
         margin-bottom: 10px;
         font-size: 13px;
